--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,29 +2,36 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 60px;
 }
+
 
 h2 {
   font-size: 24px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 input {
   width: 100%;
   padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid#ccc;
+  /* background-color: #28a745; */
+  /* color: white; */
+  border: none;
   border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #1e7e34;
 }
 
 button {
-  width: 50%;
   padding: 10px;
-  background-color: #007bff;
-  color: white;
+  width: 100%;
   border: none;
   border-radius: 4px;
+  background-color: #007bff;
+  color: white;
   cursor: pointer;
 }
 
